--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,8 @@ name = "pypi"
 [packages]
 beautifulsoup4 = "*"
 requests = "*"
-python-telegram-bot = "==13.7"
+python-telegram-bot = "==13.15"
+standard-imghdr = "*"
 python-dotenv = "*"
 
 [dev-packages]
