--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - ./data:/app/data
       - ./.env:/app/.env
     healthcheck:
-      test: ["CMD-SHELL", "if [ $(date +%s) -sub $(stat -c %Y heartbeat 2>/dev/null || echo 0) -lt 60 ]; then exit 0; else exit 1; fi"]
+      test: ["CMD-SHELL", "if [ $(( $(date +%s) - $(stat -c %Y heartbeat 2>/dev/null || echo 0) )) -lt 60 ]; then exit 0; else exit 1; fi"]
       interval: 30s
       timeout: 5s
       retries: 3
