--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build-and-push:
-    if: contains(github.event.head_commit.message, 'new_relese')
+    if: contains(github.event.head_commit.message, 'new_release')
     runs-on: ubuntu-latest
     permissions:
       contents: read
