--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,23 @@ version: '3.8'
 services:
   aulebot:
     container_name: aulebot
-    image: auleliberepolimi
-    build: 
-      context: .
-      network: host
+    image: ghcr.io/gorlix/auleliberepolimi:latest
     restart: unless-stopped
     network_mode: "host"
+    
     environment:
       - TOKEN=${TOKEN}
+      
     volumes:
-      - ./log:/app/log
-      - ./data:/app/data
-      - ./.env:/app/.env
+      - aulebot_data:/app/data
+      - aulebot_log:/app/log      
     healthcheck:
       test: ["CMD-SHELL", "if [ $(( $(date +%s) - $(stat -c %Y heartbeat 2>/dev/null || echo 0) )) -lt 60 ]; then exit 0; else exit 1; fi"]
       interval: 30s
       timeout: 5s
       retries: 3
       start_period: 15s
+
+volumes:
+  aulebot_data:
+  aulebot_log:
